# monkeybagel

./: Cargo.toml  README.md  key.asc  msg.txt
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: all.rs  signing-key.pgp  signing-key.pub.pgp  signing.rs  verify.rs
tests/test-cases/message/: signature.asc  stderr  stdout
