[package]
name = "monkeybagel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
pgp = "0.12.0-alpha.1"
rpgpie = { version = "0.0.3" }
rpgpie-cert-store = { version = "0.0.1", package = "rpgpie-certificate-store" }
openpgp-card-rpgp = { git = "https://codeberg.org/heiko/openpgp-card-rpgp" }
card-backend-pcsc = "0.5.0"
openpgp-card = "0.4.2"
openpgp-card-state = "0.1.0"

[dev-dependencies]
rstest = "0.18.2"
testresult = "0.4.0"
